# Psyk-AI-deliK

./: .env.example  .gitignore  LICENSE  README.md  README_es.md  README_fr.md  README_pt.md  SECURITY.md  app.py  artificial_virtual_paradises.md  experiment_dmt.py  pyproject.toml  requirements.txt  resultats_derive_dmt.json
.github/workflows/: python-check.yml
evaluation/: benchmark.py  connectivity.py  creativity.py
psychaidelique/: __init__.py  attention.py  bridges.py  config.py  metrics.py  profiles.py  rebus.py  reward_model.py  trainer.py  wrapper.py  wrapper3.py  wrapper_v2.py
scripts/: check_setup.py  run_experiment.py  setup_model.py
tests/: test_logic.py
