[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Psyk-AI-deliK"
version = "0.1.0"
authors = [
    { name = "charlux", email = "your-email@example.com" }
]
description = "A brief description of your project."
readme = "README.md"
license = { text = "MIT" }
homepage = "https://github.com/charlux/Psyk-AI-deliK"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
dependencies = [  # List your project dependencies here
    "requests",
    "numpy",
]